--- a/programs/test.tt
+++ b/programs/test.tt
@@ -78,13 +78,14 @@ function testvars( x ) {
 	call assert_equals( x, g, ${-} );
 	call assert_equals( 1, TRUE, ${-} );
 	call assert_equals( 0, FALSE, ${-} );
+	call assert_throws( "Name 'a' already defined", ${ () { var a; } } );
 	call assert_throws( "Undeclared variable 'xxx'", ${ () { let xxx = 0; } } );
 	call assert_throws( "Expected '=' after 'let'", ${ () { let xxx; } } );
 	return g;
 }
 
 function testarray() {
-	var b, c, err, [ arr *( TWO TWO ) ];
+	var b, c, err, idx, [ arr *( TWO TWO ) ];
 	call setg( 0 );	
 	call assert_equals( 0, g, ${-} );
 	call assert_equals( 0, $len( a ), ${-} );
@@ -93,9 +94,9 @@ function testarray() {
 	call assert_equals( 3, $len( a3 ), ${-} );
 	call assert_equals( 4, $len( arr ), ${-} );
 	dim [ a 3 ];
-	set [ a,0 ] = "a";
+	set [ a,idx ] = "a";
 	set [ a 1 ] = 1;
-	set [ a 2 ] = [ a 0 ];
+	set [ a 2 ] = [ a idx ];
 	dim [ a,2 ];
 	dim [ a 1 ];
 	call assert_equals( "a", [ a 0 ], ${-} );
@@ -374,8 +375,9 @@ function testcat() {
 }
 
 function testchr() {
+	var idx;
 	call assert_equals( 126, $chr( "~" 0 ), ${-} );
-	call assert_equals( -1, $chr( "\377" 0 ), ${-} );
+	call assert_equals( -1, $chr( "\377" idx ), ${-} );
 	call assert_throws( "1", ${ () { call $chr( except( ${ 1 } ) 0 ); } } );
 	call assert_throws( "1", ${ () { call $chr( "" except( ${ 1 } ) ); } } );
 	call assert_throws( "Not a string", ${ () { call $chr( 0 0 ); } } );
