--- a/programs/test.tt
+++ b/programs/test.tt
@@ -126,8 +126,10 @@ function testarray() {
 	call assert_throws( "Not an array.", ${ () { dim[ 0 0 ]; } } );
 	call assert_throws( "Negative array size.", ${ () { dim[ a -1 ]; } } );
 	call assert_throws( "Invalid array length.", ${ () { call $array( -1 ); } });
-	call assert_throws( "Array index", ${ () { set [ $array( 1 ) 1 ] = except( ${ 0 } ); } } );
-	call assert_throws( "Array index", ${ () { call [ $array( 1 ) 1 ]; } } );
+	call assert_throws( "Array index", ${ () { set [ $array( 0 ) -1 ] = except( ${ 0 } ); } } );
+	call assert_throws( "Array index", ${ () { set [ $array( 0 ) 0 ] = except( ${ 0 } ); } } );
+	call assert_throws( "Array index", ${ () { call [ $array( 0 ) -1 ]; } } );
+	call assert_throws( "Array index", ${ () { call [ $array( 0 ) 0 ]; } } );
 	call assert_throws( "Not an array", ${ () { call [ 0 0 ]; } } );
 	call assert_throws( "Not an array", ${ () { set [ 0 0 ] = 0; } } );
 	call assert_throws( "Invalid index expression", ${ () { call []; } } );
@@ -383,6 +385,7 @@ function testchr() {
 	call assert_throws( "1", ${ () { call $chr( except( ${ 1 } ) 0 ); } } );
 	call assert_throws( "1", ${ () { call $chr( "" except( ${ 1 } ) ); } } );
 	call assert_throws( "Not a string", ${ () { call $chr( 0 0 ); } } );
+	call assert_throws( "String index", ${ () { call $chr( "" -1 ); } } );
 	call assert_throws( "String index", ${ () { call $chr( "" 0 ); } } );
 }
 
