--- a/programs/test.tt
+++ b/programs/test.tt
@@ -149,6 +149,15 @@ function testarray() {
 	call assert_throws( "Local variable 'x' already", ${ ( x ) { var x = $array( 0 ); } } );
 }
 
+function testbuffer() {
+	var b = $buffer( 1 );
+	call assert_equals( 1, $len( b ), ${-} );
+	let [ b 0 ] = $tup( "a", $chr( "a" 0 ) );
+	call assert_equals( $chr( "a" 0 ), [ b 0 ], ${-} );
+	call assert_equals( "a", $sub( b 0 1 ), ${-} );
+	call assert_throws( "Invalid buffer length.", ${ () { call $buffer( -1 ); } });
+}
+
 function testswitch() {
 	var x;
 	switch $tup( "a" 1 ) {
@@ -703,6 +712,7 @@ program test {
 	call assert( =( testvars( ONE ) ONE ), ${-} );
 	call testprint();
 	call testarray();
+	call testbuffer();
 	call assert( =( fact( 3 ) 6 ), ${-} );
 	call testswitch();
 	call testif();
