--- a/programs/test.tt
+++ b/programs/test.tt
@@ -703,6 +703,20 @@ function testworker() {
 	call assert_throws( "Operation", ${ () { call $result( $execute( $worker( ${ () { call $worker( 0 ); } } ) ) ); } } );
 }
 
+function testthiscall() {
+	var obj = $new( exten );
+	let [ obj exten.g ] = $function( ${ ( this x ) { let [ this exten.f ] = x; return x; } } );
+	call assert_equals( 1, :exten.g( obj 1 ), ${-} );
+	call assert_equals( 1, [ obj exten.f ], ${-} );
+	call assert_throws( "Not an array", ${ () { call :exten.g( 0 ); } } );
+	call assert_throws( "Array index", ${ () { call :exten.g( $array( 0 ) ); } } );
+	call assert_throws( "Undeclared or invalid", ${ () { call :x(); } } );
+	call assert_throws( "Undeclared or invalid", ${ () { call :exten(); } } );
+	call assert_throws( "Field 'exten.x' not declared", ${ () { call :exten.x(); } } );
+	call assert_throws( "Expected '('", ${ () { call :exten.g; } } );
+	call assert_throws( "Expected expression", ${ () { call :exten.g(); } } );
+}
+
 program test {
 	call hello();
 	call assert( =( testvoid() 0 ), ${-} );
@@ -756,5 +770,6 @@ program test {
 	call testvalues();
 	call testfunction();
 	call testworker();
+	call testthiscall();
 	print "Tests passed.";
 }
