--- a/programs/prettyprint.tt
+++ b/programs/prettyprint.tt
@@ -19,12 +19,10 @@ rem {
 	Return a string containing the specified number of tabs.
 }
 function indent_str( level ) {
-	var idx, arr = $array( level );
-	while <( idx level ) {
-		set [ arr idx ] = 9;
-		inc idx;
+	if >( level 8 ) {
+		return $cat( indent_str( 8 ) indent_str( -( level 8 ) ) );
 	}
-	return $sub( arr, 0, level );
+	return $sub( "\11\11\11\11\11\11\11\11" 0 level );
 }
 
 rem {
