--- a/programs/test.tt
+++ b/programs/test.tt
@@ -329,6 +329,7 @@ function testlogic() {
 	call assert_equals( 1, &&( 1 1 1 ), ${-} );
 	call assert_equals( 1, &&( 1 "a" ), ${-} );
 	call assert_equals( 1, &&( "a" 1 ), ${-} );
+	call assert_equals( 1, &&( "a" "a" "a" ), ${-} );
 	call assert_equals( 0, &&( 0 except( ${-} ) ), ${-} );
 	call assert_equals( 0, ||( 0 0 ), ${-} );
 	call assert_equals( 1, ||( 0 1 ), ${-} );
