--- a/programs/test.tt
+++ b/programs/test.tt
@@ -155,7 +155,7 @@ function testbuffer() {
 	let [ b 0 ] = $tup( "a", $chr( "a" 0 ) );
 	call assert_equals( $chr( "a" 0 ), [ b 0 ], ${-} );
 	call assert_equals( "a", $sub( b 0 1 ), ${-} );
-	call assert_throws( "Invalid buffer length.", ${ () { call $buffer( -1 ); } });
+	call assert_throws( "Invalid array length.", ${ () { call $buffer( -1 ); } });
 }
 
 function testswitch() {
