--- a/programs/test.tt
+++ b/programs/test.tt
@@ -7,9 +7,6 @@ const STR = "*";
 const CAT = $str( "*" "*" );
 const ELE = ${ ( * ) };
 
-global g, g1 = 1, g2 = +( g1 1 );
-array a, a1 = $array( 1 ), [ a2 g2 ] [ a3 ${ 1, 2, 3 } ];
-
 struct struc {
 	a,b,c,d,e;
 };
@@ -17,6 +14,9 @@ struct struc {
 struct exten( struc ) {
 	f,g;
 };
+
+global g, g1 = 1, g2 = +( g1 1 );
+array a, a1 = $array( 1 ), [ a2 g2 ] [ a3 ${ 1, 2, 3 } ], ( exten ) ext = $new( exten );
 
 include "hello.tt";
 
@@ -100,7 +100,7 @@ function testarray() {
 	dim [ a,2 ];
 	dim [ a 1 ];
 	call assert_equals( "a", [ a 0 ], ${-} );
-	let a = $array( ${ 0, $str( "\"one" "\"" ), $tup( "\\two\\"2 ), "\063", ${ four(4) }, 84, 84 } );
+	let a = $array( ${ 0, $str( "\"one", "\"" ), $tup( "\\two\\"2 ), "\063", ${ four(4) }, 84, 84 } );
 	let a = $array( $parse( $unparse( $values( a ) ) ) );
 	call assert_equals( 7, $len( a ), ${-} );
 	call assert_equals( 0, [ a 0 ], ${-} );
@@ -150,11 +150,12 @@ function testarray() {
 }
 
 function testbuffer() {
-	var b = $buffer( 1 );
+	var b = $buffer( ${ $tup( "a", 1 ) } );
 	call assert_equals( 1, $len( b ), ${-} );
-	let [ b 0 ] = $tup( "a", $chr( "a" 0 ) );
-	call assert_equals( $chr( "a" 0 ), [ b 0 ], ${-} );
-	call assert_equals( "a", $sub( b 0 1 ), ${-} );
+	call assert_equals( 1, [ b 0 ], ${-} );
+	let b = $buffer( struc );
+	let struc.a( b ) = $tup( "a", 2 );
+	call assert_equals( 2, struc.a( b ), ${-} );
 	call assert_throws( "Invalid array length.", ${ () { call $buffer( -1 ); } });
 }
 
@@ -557,15 +558,18 @@ function testunpack() {
 }
 
 function teststruct() {
-	var obj = $new( exten );
-	let exten.g( obj ) = 1;
+	var ( exten ) obj = $new( exten );
+	let exten.f( obj ) = "a";
+	let exten.f( obj ) = 1;
+	let obj.g = 2;
 	call assert_equals( 5, struc, ${-} );
 	call assert_equals( 7, exten, ${-} );
 	call assert_equals( 0, struc.a, ${-} );
 	call assert_equals( 4, struc.e, ${-} );
 	call assert_equals( 6, exten.g, ${-} );
 	call assert_equals( 7, $len( $new( exten ) ), ${-} );
-	call assert_equals( 1, exten.g( obj ), ${-} );
+	call assert_equals( 1, exten.f( obj ), ${-} );
+	call assert_equals( 2, obj.g, ${-} );
 	call assert_throws( "Field 'struc.xxx' not declared", ${ () { call struc.xxx; } } );
 	call assert_throws( "Wrong number", ${ () { call struc.a( 0 0 ); } } );
 	call assert_throws( "Not an array", ${ () { call struc.a( 0 ); } } );
@@ -575,6 +579,15 @@ function teststruct() {
 	call assert_throws( "Invalid", ${ () { set struc.a() = 0; } } );
 	call assert_throws( "Not an array", ${ () { set struc.a( 0 ) = 0; } } );
 	call assert_throws( "Array index", ${ () { set exten.g( $new( struc ) ) = 0; } } );
+	call assert_throws( "Structure 'xxx' not", ${ () { var ( xxx ) a; } } );
+	call assert_throws( "Expression 'p.xxx' has no", ${ ( p ) { call p.xxx; } } );
+	call assert_throws( "Field not declared", ${ ( ( exten ) p ) { call p.xxx; } } );
+	call assert_throws( "Expression 'a.xxx' has no", ${ () { call a.xxx; } } );
+	call assert_throws( "Field not declared", ${ () { call ext.xxx; } } );
+	call assert_throws( "Variable 'p' has no", ${ ( p ) { let p.xxx = 1; } } );
+	call assert_throws( "Field 'xxx' not declared", ${ ( ( exten ) p ) { let p.xxx = 1; } } );
+	call assert_throws( "Variable 'a' has no", ${ () { let a.xxx = 1; } } );
+	call assert_throws( "Field 'xxx' not declared", ${ () { let ext.xxx = 1; } } );
 }
 
 function testfuncref() {
@@ -690,17 +703,20 @@ function testfunction() {
 		$function( ${ () { 
 			return :( $function( $parse( "( param ) { return param; }" ) ) ONE );
 		} } ) ), ${-} );
+	call assert_throws( "1", ${ () { return except( ${ 1 } ); } } );
 	call assert_throws( "1", ${ () { call $function( except( ${ 1 } ) ); } } );
+	call assert_throws( "1", ${ () { call :( $function( ${ ( param ) {} } ) except( ${ 1 } ) ); } } );
 	call assert_throws( "Not an element.", ${ () { call $function( 0 ); } } );
 	call assert_throws( "Expected '(' after '$function'", ${ () { call $function( ${ x } ); } } );
 	call assert_throws( "Invalid name '1'", ${ () { call $function( ${ ( 1 ) {} } ); } } );
 	call assert_throws( "Parameter 'x' already", ${ () { call $function( ${ ( x x ) {} } ); } } );
 	call assert_throws( "Local variable 'x' already", ${ () { call $function( ${ ( x ) { var x; } } ); } } );
 	call assert_throws( "Unrecognized keyword 'x'", ${ () { call $function( ${ () { x } } ); } } );
+	call assert_throws( "Structure 'xxx' not declared", ${ ( ( xxx ) p ) {} } );
 }
 
 function testworker() {
-	var worker = $execute( $worker( ${ () { locked { return 1; } } } ) );
+	var worker = $execute( $worker( ${ () { locked { var a = 1; return a; } } } ) );
 	call assert_equals( 1, $result( worker ), ${-} );
 	call assert_equals( 1, $result( $execute( $worker( ${ ( a ) { let [ a 0 ] = 1; return [ a 0 ]; } } ), $buffer( 1 ) ) ), ${-} );
 	call assert_throws( "Unable to lock", ${ () { call $result( $execute( $worker( ${ () { locked { locked {} } } } ) ) ); } } );
@@ -721,10 +737,14 @@ function testworker() {
 }
 
 function testthiscall() {
-	var obj = $new( exten );
-	let [ obj exten.g ] = $function( ${ ( this x ) { let [ this exten.f ] = x; return x; } } );
+	var ( exten ) obj = $new( exten );
+	let [ obj exten.g ] = $function( ${ ( ( exten ) this x ) { let this.f = x; return x; } } );
 	call assert_equals( 1, :exten.g( obj 1 ), ${-} );
-	call assert_equals( 1, [ obj exten.f ], ${-} );
+	call assert_equals( 2, :obj.g( 2 ), ${-} );
+	call assert_equals( 2, [ obj exten.f ], ${-} );
+	let ext.g = obj.g;
+	call assert_equals( 3, :ext.g( 3 ), ${-} );
+	call assert_equals( 3, ext.f, ${-} );
 	call assert_throws( "Not an array", ${ () { call :exten.g( 0 ); } } );
 	call assert_throws( "Array index", ${ () { call :exten.g( $array( 0 ) ); } } );
 	call assert_throws( "Undeclared or invalid", ${ () { call :x(); } } );
